demos/simple-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
  namespace: demos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-deployment
  template:
    metadata:
      labels:
        app: simple-deployment
    spec:
      containers:
        - name: simple-deployment
          image: d3fk/asciinematic:latest
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple-deployment-service
  namespace: demos
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: simple-deployment
