demos/deployment-with-ingress-grunty.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-deployment
  namespace: demos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-deployment
  template:
    metadata:
      labels:
        app: new-deployment
    spec:
      containers:
        - name: new-deployment
          image: nginxdemos/hello:plain-text
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: new-deployment-service
  namespace: demos
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: new-deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-deployment-ingress
  namespace: demos
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: new-deployment.<votre_trigramme>.grunty.uk
      http:
        paths:
          - backend:
              service:
                name: new-deployment-service
                port:
                  number: 80
            pathType: Prefix
            path: /
---
