demos/deployment-with-ingress-https-grunty.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secured-deployment-ingress
  namespace: demos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: &host secured.<votre_trigramme>.grunty.uk
      http:
        paths:
          - backend:
              service:
                name: new-deployment-service
                port:
                  number: 80
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - *host
      secretName: *host
---
